# OneDrop

./: .gitignore  .mcp.json  CHANGELOG.md  CHANGELOG_PHASE1.md  CHANGELOG_PHASE2.md  CHANGELOG_v0.8.0.md  CHANGELOG_v0.9.0.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DAILY_SUMMARY_2025-11-26.md  OneDrop_v1.0.0_FINAL_SUMMARY.md  README.md  README.md.bak  SECURITY.md  WGPU_23_UPDATE_PLAN.md  deny.toml  preset_compatibility_report.txt  rust-toolchain.toml  test-presets
.claude/: settings.json
.claude/agents/: gpu-performance-analyzer.md  rust-security-reviewer.md
.claude/skills/cargo-check/: SKILL.md
.claude/skills/release-notes/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: BLEND_PATTERNS.md  COMPATIBILITY_REPORT.md  ONEAMP_INTEGRATION.md  V0.5.0_ROADMAP.md  V0.7.0_BEAT_DETECTION_REPORT.md
examples/double-presets/: plasma_blend.od2
milk-engine/: Cargo.toml  README.md
milk-engine/examples/: audio_reactive.rs  basic.rs
milk-engine/src/: audio.rs  engine.rs  error.rs  lib.rs  preset_manager.rs
milk-engine/tests/: integration_test.rs
milk-eval/: Cargo.toml  README.md
milk-eval/src/: context.rs  error.rs  lib.rs
milk-eval/tests/: integration_test.rs
milk-parser/: Cargo.toml
milk-parser/src/: error.rs  lib.rs
milk-parser/tests/: comprehensive_test.rs  integration_test.rs
milk-renderer/: Cargo.toml
milk-renderer/shaders/: waveform.wgsl
milk-renderer/src/: config.rs  error.rs  gpu_context.rs  lib.rs
milk-renderer/tests/: integration_test.rs
onedrop-cli/: Cargo.toml  README.md
onedrop-cli/src/: main.rs
onedrop-codegen/: Cargo.toml  README.md
onedrop-codegen/examples/: complete_pipeline.rs
onedrop-codegen/src/: compiler.rs  error.rs  generator.rs  lib.rs
onedrop-codegen/src/transpiler/: expression.rs  mod.rs  variable.rs
onedrop-engine/: Cargo.toml  README.md
onedrop-engine/benches/: performance.rs
onedrop-engine/examples/: audio_reactive.rs  basic.rs
onedrop-engine/src/: audio.rs  audio_input.rs  beat_detection.rs  default_preset.rs  engine.rs  error.rs  fft.rs  history.rs  lib.rs  preset_manager.rs  safe_loader.rs  transition.rs
onedrop-engine/tests/: beat_detection_test.rs  e2e_test.rs  integration_test.rs
onedrop-eval/: Cargo.toml  README.md
onedrop-eval/src/: cache.rs  context.rs  error.rs  evaluator.rs  evaluator_optimized.rs  lib.rs  math_functions.rs
onedrop-eval/tests/: integration_test.rs
onedrop-gui/: Cargo.toml  README.md
onedrop-gui/src/: main.rs
onedrop-hlsl/: Cargo.toml
onedrop-hlsl/src/: advanced.rs  lib.rs
onedrop-parser/: Cargo.toml  README.md
onedrop-parser/src/: double_preset.rs  error.rs  lib.rs  parser.rs  preset.rs  validator.rs
onedrop-parser/tests/: comprehensive_test.rs  double_preset_test.rs  integration_test.rs
onedrop-renderer/: Cargo.toml  README.md
onedrop-renderer/shaders/: blend.wgsl  composite.wgsl  composite_advanced.wgsl  waveform_advanced.wgsl
onedrop-renderer/src/: blend_renderer.rs  config.rs  error.rs  gpu_context.rs  lib.rs  per_pixel_pipeline.rs  per_vertex_pipeline.rs  renderer.rs  waveform.rs
onedrop-renderer/tests/: integration_test.rs
scripts/: test_all_presets.sh  test_beat_detection.sh
tools/: Cargo.toml
tools/src/: main.rs
