[workspace]
resolver = "2"
members = [
    "onedrop-hlsl",
    "onedrop-codegen",
    "onedrop-parser",
    "onedrop-eval",
    "onedrop-renderer",
    "onedrop-engine",
    "onedrop-cli",
    "onedrop-gui",
    "tools",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Manus AI"]
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
