[package]
name = "milk-parser"
version = "0.1.0"
edition = "2021"
authors = ["Manus AI"]
license = "MIT"
description = "Parser for Milkdrop .milk preset files"

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Parsing
nom = "7.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# Testing
pretty_assertions = "1.4"
