[package]
name = "onedrop-cli"
version = "0.2.0"
edition = "2024"
authors = ["Manus AI"]
license = "MIT"
description = "Command-line interface for OneDrop Milkdrop visualizer"

[[bin]]
name = "onedrop"
path = "src/main.rs"

[dependencies]
# OneDrop engine
onedrop-engine = { path = "../onedrop-engine" }
onedrop-parser = { path = "../onedrop-parser" }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"

# Async runtime
pollster = "0.3"

# Image export
image = "0.25"
