[package]
name = "onedrop-gui"
version = "0.2.0"
edition = "2024"
authors = ["Manus AI"]
license = "MIT"
description = "Graphical user interface for OneDrop Milkdrop visualizer"

[[bin]]
name = "onedrop-gui"
path = "src/main.rs"

[dependencies]
# OneDrop engine
onedrop-engine = { path = "../onedrop-engine", features = ["audio-input"] }
onedrop-parser = { path = "../onedrop-parser" }
onedrop-renderer = { path = "../onedrop-renderer" }

# Window and events
winit = "0.30"
wgpu = "23.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"

# Async
pollster = "0.3"
