[package]
name = "onedrop-parser"
version = "0.2.0"
edition = "2024"
authors = ["Manus AI"]
license = "MIT"
description = "Parser for Milkdrop .milk preset files"

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Parsing
nom = "8.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging
log = "0.4"

[dev-dependencies]
# Testing
pretty_assertions = "1.4"
